--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <header>
         <nav class="navbar navbar-expand-sm fixed-top bg-dark navbar-dark">
 
-            <img class="navbar-brand" src="GHlogo.png">
+            <img class="navbar-brand" src="GHlogo.png" height="60" width="50">
+            <h4 class="nav-item">Gurpreet Heir</h4> 
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
             <div class="navbar-collapse collapse" id="navbarCollapse" style="">
                 <ul class="navbar-nav">
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">
+                    <li class="nav-item"
                             Home
                         </a>
                     </li>
