cleaned up some code

--- a/index.html
+++ b/index.html
@@ -21,50 +21,69 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm fixed-top bg-dark navbar-dark">
 
-            <img class="navbar-brand" src="GHlogo.png" height="60" width="50">
-            <h4 class="nav-item">Gurpreet Heir</h4> 
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-            <div class="navbar-collapse collapse" id="navbarCollapse" style="">
-                <ul class="navbar-nav">
-                    </li>
-                    <li class="nav-item"
-                            Home
-                        </a>
-                    </li>
-                    <li class="nav-item">
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="navbar-brand">
+            <a class="navbar-item">
+
+                <img class="navbar-brand" src="GHlogo.png" height="70" width="64" alt="Gurpreet Heir">
+            </a>
+        </div>
+        <h3 class="nav-item"> Gurpreet Heir</h4>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarCollapse">
+                <ul class="navbar-nav nav navbar-right">
+                    <li>
                         <a class="nav-link" href="index.html">
-                            Home
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            Home
+                            Contact Me
                         </a>
                     </li>
                 </ul>
             </div>
+    </nav>
 
-        </nav>
-    </header>
+
     <div class="container">
         <div>
-            <figure class="fig">
-                <img src="Smart Lock.jpg" alt="">
+            <figure class="fig ">
+                <img src="Smart Lock.jpg " alt=" ">
                 <figcaption>
-                    <h2 class="name">Smart Lock</h2>
+                    <h2 class="name ">Smart Lock</h2>
                 </figcaption>
             </figure>
         </div>
         <div>
-            <figure class="fig">
-                <img src="Robot.jpg" alt="">
+            <figure class="fig ">
+                <img src="Robot.jpg " alt=" ">
                 <figcaption>
-                    <h2 class="name">Robot</h2>
+                    <h2 class="name ">Robot</h2>
+                </figcaption>
+            </figure>
+        </div>
+        <div>
+            <figure class="fig ">
+                <img src="Robot.jpg " alt=" ">
+                <figcaption>
+                    <h2 class="name ">Robot</h2>
+                </figcaption>
+            </figure>
+        </div>
+        <div>
+            <figure class="fig ">
+                <img src="Robot.jpg " alt=" ">
+                <figcaption>
+                    <h2 class="name ">Robot</h2>
+                </figcaption>
+            </figure>
+        </div>
+        <div>
+            <figure class="fig ">
+                <img src="Robot.jpg " alt=" ">
+                <figcaption>
+                    <h2 class="name ">Robot</h2>
                 </figcaption>
             </figure>
         </div>
@@ -75,11 +94,11 @@
 
 
 
-    <footer class="foot">
+    <footer class="foot ">
 
-        <span class="text-muted">
+        <span class="text-muted ">
             Website and Projects by Gurpreet Heir, Source code found at
-            <a href="https://github.com/GurpreetH/ncWeb">GitHub</a>
+            <a href="https://github.com/GurpreetH/ncWeb ">GitHub</a>
         </span>
 
 
